# SLAMBook2_Codes

./: 1  README.md
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
ch12/dense_RGBD/: octomap_mapping.cpp  pointcloud_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: backend.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h
ch13/src/: CMakeLists.txt  backend.cpp  frame.cpp  frontend.cpp  map.cpp  viewer.cpp
ch13/test/: CMakeLists.txt
ch2/: CMakeLists.txt  libHelloSLAM.cpp
ch3/examples/: plotTrajectory.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.h
